ui-tests/tests/ui/just_ident.stderr
error: expected `=` following `howdy`
 --> $DIR/just_ident.rs:6:5
  |
6 |     howdy
  |     ^^^^^
